[gd_scene load_steps=7 format=3 uid="uid://7t7521fof6oi"]

[ext_resource type="Script" path="res://scripts/flappy controller.gd" id="1_w3pba"]
[ext_resource type="AudioStream" uid="uid://bd0kw21v7awob" path="res://audio/Three Red Hearts - Candy.ogg" id="6_xhamy"]
[ext_resource type="AudioStream" uid="uid://igt2l4emkrfu" path="res://audio/impactPlate_heavy_001.ogg" id="7_rsr3f"]

[sub_resource type="Animation" id="Animation_c58u0"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, -50), Vector2(520, 300)]
}

[sub_resource type="Animation" id="Animation_arwe2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(520, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w3dlm"]
_data = {
"RESET": SubResource("Animation_arwe2"),
"slide": SubResource("Animation_c58u0")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_w3pba")

[node name="rockTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="bgm" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("6_xhamy")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="thud" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("7_rsr3f")
volume_db = 2.0

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 520.0
offset_top = -50.0
offset_right = 560.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = -48.0
offset_right = 88.0
offset_bottom = -25.0
text = "Game Over
"

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Play Again"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_w3dlm")
}

[connection signal="timeout" from="rockTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
